[package]
name = "aoc"
version = "0.1.0"
authors = ["James Cowgill <jcowgill@jcowgill.uk>"]
edition = "2021"

[lib]
name = "aoclib"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/bin.rs"

[dependencies]
itertools = "0.10"
lazy_static = "1"
nalgebra = "0.29"
num = "0.1"
regex = "1"
strum = { version = "0.23", features = ["derive"] }
