[package]
name = "aoc"
version = "0.1.0"
authors = ["James Cowgill <jcowgill@jcowgill.uk>"]
edition = "2021"
rust-version = "1.91"

[lib]
name = "aoclib"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/bin.rs"

[dependencies]
itertools = "0.14"
nalgebra = "0.34"
num = "0.4"
regex = "1"
strum = { version = "0.27", features = ["derive"] }
